# suricata-6.0.10-comment

./: .gitignore  Makefile  Makefile.am  Makefile.in  aclocal.m4  compile_commands.json  config.status  configure  configure.ac  configure~  eve.json  libtool  suricata.yaml
ebpf/: Makefile  Makefile.in
etc/: Makefile  Makefile.in
libhtp/: .gitignore
libhtp/htp/lzma/: Makefile
python/: Makefile  Makefile.in
qa/: Makefile  Makefile.in
qa/coccinelle/: Makefile  Makefile.in
rust_back/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  app-layer-htp-file.c  app-layer-htp.h  app-layer-ntp.c  app-layer-parser.c  app-layer-parser.h  app-layer-template.h  app-layer.c  autoconf.h  autoconf.h.in  build-info.h  counters.c  debug.h  decode-events.c  decode-events.h  decode-icmpv4.h  decode-icmpv6.c  decode-icmpv6.h  decode-ipv4.c  decode-ipv6.c  decode-raw.c  decode-udp.c  decode.c  decode.h  detect-app-layer-event.c  detect-asn1.c  detect-config.c  detect-csum.c  detect-dns-opcode.c  detect-dns-query.c  detect-engine-analyzer.c  detect-engine-build.c  detect-engine-content-inspection.c  detect-engine-file.c  detect-engine-loader.c  detect-engine-profile.c  detect-engine-register.c  detect-engine-register.h  (+64 more)
src/.deps/: alert-debuglog.Po  alert-fastlog.Po  alert-prelude.Po  alert-prelude.Tpo  alert-syslog.Po  app-layer-dcerpc-udp.Po  app-layer-dcerpc.Po  app-layer-detect-proto.Po  app-layer-dnp3-objects.Po  app-layer-dnp3.Po  app-layer-enip-common.Po  app-layer-enip.Po  app-layer-events.Po  app-layer-expectation.Po  app-layer-ftp.Po  app-layer-htp-body.Po  app-layer-htp-file.Po  app-layer-htp-libhtp.Po  app-layer-htp-mem.Po  app-layer-htp-xff.Po  app-layer-htp.Po  app-layer-http2.Po  app-layer-ikev2.Po  app-layer-krb5.Po  app-layer-modbus.Po  app-layer-mqtt.Po  app-layer-nfs-tcp.Po  app-layer-nfs-udp.Po  app-layer-ntp.Po  app-layer-parser.Po  app-layer-protos.Po  app-layer-rdp.Po  app-layer-register.Po  app-layer-rfb.Po  app-layer-sip.Po  app-layer-smb.Po  app-layer-smtp.Po  app-layer-snmp.Po  app-layer-ssh.Po  app-layer-ssl.Po  (+521 more)
src/rust-defs/: app-layer-types.h
src/tests/: detect-file-data.c  detect-http-header.c  detect-ssl-version.c  detect.c
suricata-update/: Makefile.in
